kubernetes-modules/k8s-operator/src/main/resources/templates/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    ManagedBy: deptrack-operator
    component: api-server-service
  name: deptrack-api-server
  namespace: deptrack
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    ManagedBy: deptrack-operator
    component: api-server
  sessionAffinity: None
  type: ClusterIP
